--- a/show-app-backend/show_app/android/app/src/main/AndroidManifest.xml
+++ b/show-app-backend/show_app/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
     <!-- Permissions to read and write external storage -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="android.permission.CAMERA"/>
 
     <application
+    android:requestLegacyExternalStorage="true"
         android:label="show_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
