--- a/show-app-backend/show_app/pubspec.yaml
+++ b/show-app-backend/show_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.3.0
   image_picker_for_web: ^3.0.6
   mime: ^2.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
